# RAG

./: 1-rag_evaluation.ipynb  README.md  app.py  books.jsonl  pyproject.toml  requirements.txt  typesense.ipynb
data/text_files/: machine_learning.txt  python_intro.txt
src/: data_loader.py  embedding.py  search.py  vectorstore.py
