[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.3",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.14.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "typesense>=2.0.0",
]
